--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
     </div>
 
     <footer class="footer-section">
-        <p>&copy; 2025 Ed Hill. All rights reserved.</p>
+        <p>All views expressed on this site are my own and do not necessarily reflect those of any entity with which I am affiliated.</p>
     </footer>
 </body>
 </html>
