--- a/index.html
+++ b/index.html
@@ -283,6 +283,8 @@
 
             <section class="section">
                 <h2 class="section-title">Recent Papers</h2>
+                <p style="text-align: center;" >See <a href="https://scholar.google.com/citations?hl=en&user=mutaoa0AAAAJ">Google Scholar</a> for a full list of publications.</p>
+                
                 <p style="text-align: center; font-style: italic; margin-bottom: 2rem;">*We are preparing these for journal submission later in the year</p>
 
                 <div class="papers-grid">
