--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
         }
 
         .paper-abstract {
+            font-size: 0.7em;
             color: #555;
             line-height: 1.6;
             text-align: justify;
