Simplify paper abstract by removing examples
Removed specific examples of language models to streamline the abstract.

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                             </div>
                             <div class="paper-authors">with Iulia Bucur, 2025, Bank Underground blog post</div>
                             <div class="paper-abstract">
-                                Modern language models – think OpenAI’s GPTs, Google’s Gemini or DeepSeek – are powerful tools: but how can we use them in economic policymaking? Economic analysis often relies on decompositions to understand macroeconomic data and inform counterfactuals. But these decompositions are typically obtained from numerical data or macroeconomic models and so may overlook nuanced insights embedded in unstructured text. We propose decomposing the metrics which Large Language Models (LLMs) can derive from text data to offer insights from large collections of documents in a highly interpretable format. This approach aims to bridge the gap between natural language processing (NLP) techniques and economic decision-making, offering a richer, more context-aware understanding of complex economic phenomena.
+                                Modern language models are powerful tools: but how can we use them in economic policymaking? We propose decomposing the metrics which Large Language Models (LLMs) can derive from text data to offer insights from large collections of documents in a highly interpretable format. This approach aims to bridge the gap between natural language processing (NLP) techniques and economic decision-making, offering a richer, more context-aware understanding of complex economic phenomena.
                             </div>
                         </div>
                     </div>
