Add hyperlink to Count website in previous work section

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 
             <section class="section">
                 <h2 class="section-title">Previous Work</h2>
-                <p>Prior to my current role at the Bank of England (2019-), I co-founded Count (count.co, 2016-19), was a PhD student, post-doc and research fellow in the Plasma Physics Group at Imperial College, London (2007-16), and did the Maths Tripos at Trinity College, Cambridge (2003-07).</p>
+                <p>Prior to my current role at the Bank of England (2019-), I co-founded Count (<a href="https://count.co/">count.co</a>, 2016-19), was a PhD student, post-doc and research fellow in the Plasma Physics Group at Imperial College, London (2007-16), and did the Maths Tripos at Trinity College, Cambridge (2003-07).</p>
                 <p>See <a href="https://scholar.google.com/citations?hl=en&user=mutaoa0AAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a> for my publications. <a href="https://www.linkedin.com/in/ed-hill/">LinkedIn</a>.</p>
                 <p>I enjoy running, playing the piano and learning languages (not to the point of being very good at them, but I like to compare and contrast – Arabic, Mandarin, Japanese, …)</p>
             </section>
